[FIX] Set SonarLint