@@ -4,11 +4,8 @@ package com.hv.community.backend.service.member;
 import com.hv.community.backend.domain.member.Member;
 import com.hv.community.backend.repository.member.MemberRepository;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -18,11 +15,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 
+@Slf4j
 @Service
 @Transactional
 public class CustomUserDetailsService implements UserDetailsService {
-
-  private final Logger logger = LoggerFactory.getLogger(getClass());
 
   private final MemberRepository memberRepository;
 
@@ -40,10 +36,10 @@ public class CustomUserDetailsService implements UserDetailsService {
 
   // DB 의 Member 값으로 UserDetails 객체 생성 후 반환
   private UserDetails createUserDetails(Member member) {
-    logger.info(member.toString());
-    List<GrantedAuthority> grantedAuthorities = member.getRoles().stream()
+    log.info(member.toString());
+    List<SimpleGrantedAuthority> grantedAuthorities = member.getRoles().stream()
         .map(role -> new SimpleGrantedAuthority(role.getRoleName()))
-        .collect(Collectors.toList());
+        .toList();
 
     return new User(
         member.getEmail(),
